# encoder-gag

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  Start.sh  build.sh  conanfile.txt  crib.txt  docker-build.sh  docker-compose-down.sh  docker-compose-up.sh  docker-compose.yml  docker-run.sh  docker-stop.sh  logs.sh  messages.hpp  rebuild.sh
include/: cache.hpp  colors.hpp  constants.hpp  database.hpp  logger.hpp  messages.hpp  utils.hpp
include/agents/: db_agent.hpp  ffmpeg_agent.hpp  http_agent.hpp
scripts/: create.sh  delete.sh  filter_codec.sh  filter_date.sh  get.sh  get_by_id.sh  get_sorted.sh  health.sh  test_errors.sh
src/: colors.hpp  database.cpp  database.hpp  main.cpp
src/Agents/: db_agent.cpp  db_agent.hpp  ffmpeg_agent.cpp  http_agent.cpp  http_agent.hpp  http_handlers.cpp  http_print.cpp
